[package]
name = "into-the-depths"
version = "0.1.0"
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "0.2"
log = "0.4"
mogwai = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "^0.3"
features = ["HtmlInputElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
